--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.3.4",
     "ioredis": "^5.3.2",
     "next": "13.3.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "pusher": "^5.1.3",
     "pusher-js": "^8.0.2",
