--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timeago": "^7.1.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-timeago": "^4.1.3",
     "@types/uuid": "^9.0.1"
   }
 }
